upgrade lincheck